pxc/tests/test_11_foreach/fe_noret.px
namespace fe_noret;
import test_common "";


function {t} void field_to_string(string n, t fld, string& str_r)
{
  str_r.append("(");
  str_r.append(n);
  str_r.append(" : ");
  str_r.append(meta::symbol{t, meta::concat{t, "_to_string"}}(fld));
  str_r.append(")");
}

struct foo {
  int x;
}

function int test()
{
  foreach (fld : foo) {
    return 3;
  } // error: no return
}

int r = test();

